# tensorswitch

./: .gitignore  CITATION.cff  LICENSE.md  README.md  pyproject.toml  runnables.yaml
.github/workflows/: ci.yml
Moe/wk_patches/: apply_patches.sh  cli_convert_zarr.py  client__download_dataset.py
PPT/: Diyi_tensorswitch_presentation.html  README_PPT.md
PPT/css/: presentation-style.css
PPT/js/: impressConsole.js
PPT_v2/: Diyi_TensorSwitch_v2_Dark.html  Diyi_TensorSwitch_v2_PPT.html
contrib/: add_dimension_names.py  bleaching_correction_task.py  start_neuroglancer_server.py  submit_bleaching_correction_general.py  submit_bleaching_correction_s0.py  update_metadata.py  update_metadata_zarr2.py  update_segmentation_attributes.py  z_to_chunk_index.py
src/tensorswitch/: README.md  __main__.py  dask_utils.py  utils.py
src/tensorswitch/gui/: README_GUI.md  __init__.py  app.py  cost_estimator.py  launch_gui.py
src/tensorswitch/gui/ai/: __init__.py  ai_config.py  ai_interface.py  tensorswitch_assistant.py
src/tensorswitch/gui/format_detection/: __init__.py  format_detector.py  task_planner.py
src/tensorswitch/gui/lab_paths_system/: Lab_and_project_file_share_path.xlsx  __init__.py  hierarchical_lab_paths.json  lab_paths.py  lab_paths_data.json  path_selector.py  simple_path_selector.py
src/tensorswitch/tasks/: __init__.py  czi_to_zarr3_s0.py  downsample_shard_zarr3.py  downsample_zarr2.py  ims_to_zarr2_s0.py  ims_to_zarr3_s0.py  n5_to_n5.py  n5_to_zarr2.py  n5_to_zarr3_s0.py  nd2_to_zarr2_s0.py  nd2_to_zarr3_s0.py  precomputed_to_n5.py  re_submit_jobs.ipynb  tiff_to_zarr2_s0.py  tiff_to_zarr3_s0.py
src/tensorswitch/xslt/: Channels.xsl  Pixels.xsl
src/tensorswitch_v2/: README.md  __init__.py  __main__.py  mcp_server.py
src/tensorswitch_v2/api/: __init__.py  dataset.py  readers.py  writers.py
src/tensorswitch_v2/core/: __init__.py  batch.py  converter.py  downsampler.py  pyramid.py  retry.py  two_pass.py  upsampler.py
src/tensorswitch_v2/readers/: __init__.py  base.py  bioformats.py  bioio_adapter.py  czi.py  hdf5.py  ims.py  n5.py  nd2.py  precomputed.py  tiff.py  zarr.py
src/tensorswitch_v2/utils/: __init__.py  chunk_utils.py  folder_discovery.py  format_loaders.py  metadata_utils.py  ome_structure.py  omero.py  pyramid_utils.py  resource_utils.py  tensorstore_utils.py
src/tensorswitch_v2/writers/: __init__.py  base.py  n5.py  zarr2.py  zarr3.py
tests/: conftest.py  test_data_config.py  test_http_support.py  test_ims_to_zarr3_middle_chunks.py  test_n5_to_n5.py  test_n5_to_zarr2.py  test_n5_to_zarr3_downsample_shard.py  test_nd2_to_zarr3_middle_chunks.py  test_zarr3_to_downsample_noshard_zarr3.py  test_zarr3_to_downsample_shard_zarr3.py
tests/cli/: test_cli_conversions_real.py  test_cli_conversions_synthetic.py  test_cli_ome_zarr.py
tests/gui/: test_gui_conversions_synthetic.py  test_gui_ome_zarr.py
tests/tensorswitch_v2/: __init__.py  conftest.py  test_auto_multiscale_routing.py  test_axis_voxel_warning.py  test_bioio_adapter.py  test_bioio_conversion.py  test_converter.py  test_coordinator_and_voxel.py  test_dimension_inference.py  test_dtype_cast.py  test_fc_order.py  test_folder_discovery.py  test_ome_structure.py  test_omero_metadata.py  test_readers.py  test_real_data.py  test_retry.py  test_shard_auto_clamp.py  test_upsampler.py  test_writers.py
