[project]
name = "tensorswitch"
version = "0.1.0"
requires-python = ">= 3.11"
dependencies = [
    "tensorstore",
    "psutil",
    "requests",
    "numpy",
]
description = "This package provides a unified entry point and organized task modules for managing N5/Zarr dataset conversions and downsampling. It centralizes your workflow into a single pipeline to reduce manual work and errors."
readme = "README.md"
authors = [
    {name = "Diyi K Chen", email = "chend@janelia.hhmi.org"},
    {name = "Mark Kittisopiikul", email = "kittisopikulm@janelia.hhmi.org"}
]
license = "BSD-3-Clause"
license-files = ["LICENSE.md"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]


[project.urls]
Homepage = "https://github.com/JaneliaSciComp/tensorswitch"
Issues = "https://github.com/JaneliaSciComp/tensorswitch/issues"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
tensorswitch = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
tensorstore = ">=0.1.65,<0.2"
psutil = ">=7.0.0,<8"
requests = ">=2.32.3,<3"
pytest = ">=8.3.5,<9"
numpy = ">=2.2.5,<3"
tifffile = ">=2025.6.11,<2026"
dask = ">=2025.5.1,<2026"
dask-image = ">=2024.5.3,<2025"

[tool.pixi.feature.ipykernel.dependencies]
ipykernel = "*"

[tool.pixi.environments]
jupyter = ["ipykernel"]
