[project]
name = "tensorswitch"
version = "0.1.0"
requires-python = ">= 3.11"
dependencies = [
    "tensorstore>=0.1.79,<0.2",
    "psutil",
    "requests",
    "numpy", "ome-zarr-models @ git+https://github.com/ome-zarr-models/ome-zarr-models-py.git",
    "panel>=1.4.0",
    "param",
    "sqlalchemy",
    "apscheduler",
    "openai",
    "pydantic",
    "watchdog",
]
description = "This package provides a unified entry point and organized task modules for managing N5/Zarr dataset conversions and downsampling. It centralizes your workflow into a single pipeline to reduce manual work and errors."
readme = "README.md"
authors = [
    {name = "Diyi K Chen", email = "chend@janelia.hhmi.org"},
    {name = "Mark Kittisopiikul", email = "kittisopikulm@janelia.hhmi.org"}
]
license = "BSD-3-Clause"
license-files = ["LICENSE.md"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]


[project.urls]
Homepage = "https://github.com/JaneliaSciComp/tensorswitch"
Issues = "https://github.com/JaneliaSciComp/tensorswitch/issues"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
tensorswitch = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
psutil = ">=7.0.0,<8"
requests = ">=2.32.3,<3"
pytest = ">=8.3.5,<9"
numpy = ">=2.2.5,<3"
tifffile = ">=2025.6.11,<2026"
dask = ">=2025.7.0,<2026"
dask-image = ">=2024.5.3,<2025"
dask-jobqueue = "==0.9.0"
cachey = ">=0.2.1,<0.3"
matplotlib = ">=3.10.3,<4"
zarr = ">=3.1.1,<4"
ome-types = ">=0.6.0,<0.7"
nd2 = ">=0.10.3,<0.11"
h5py = ">=3.14.0,<4"
panel = ">=1.4.0,<2"
param = ">=2.1.0,<3"
sqlalchemy = ">=2.0.0,<3"
apscheduler = ">=3.10.0,<4"
openai = ">=1.0.0,<2"
pydantic = ">=2.0.0,<3"
watchdog = ">=4.0.0,<5"
pandas = "*"
openpyxl = "*"
awscli = ">=2.28.1,<3"

[tool.pixi.feature.ipykernel.dependencies]
ipykernel = "*"

[tool.pixi.environments]
jupyter = ["ipykernel"]
