[project]
name = "tensorswitch"
version = "2.0.2"
requires-python = ">= 3.11"
dependencies = [
    "tensorstore>=0.1.79,<0.2",
    "psutil",
    "requests",
    "numpy",
    "pydantic",
    "pylibczirw>=5.1.1,<6",
    "tifffile>=2025.6.11",
    "dask",
    "dask-image",
    "nd2>=0.10.3",
    "h5py>=3.14.0",
    "ome-types>=0.6.0,<0.7",
    "bioio>=3.2.0,<4",
    "bioio-czi>=2.1.0,<3",
    "bioio-nd2>=0.3.0",
    "bioio-tifffile>=1.1.0",
    "scipy>=1.8",
]
description = "This package provides a unified entry point and organized task modules for managing N5/Zarr dataset conversions and downsampling. It centralizes your workflow into a single pipeline to reduce manual work and errors."
readme = "README.md"
authors = [
    {name = "Diyi Chen", email = "chend@janelia.hhmi.org"},
    {name = "Mark Kittisopiikul", email = "kittisopikulm@janelia.hhmi.org"}
]
license = "BSD-3-Clause"
license-files = ["LICENSE.md"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
bioformats = [
    "bioio-bioformats>=1.0.0",
    "bioformats_jar",
    "scyjava>=1.12.0,<2",
]
mcp = [
    "mcp>=1.0.0",
]
all = [
    "tensorswitch[bioformats,mcp]",
]

[project.scripts]
tensorswitch-v2 = "tensorswitch_v2.__main__:main"

[project.urls]
Homepage = "https://github.com/JaneliaSciComp/tensorswitch"
Issues = "https://github.com/JaneliaSciComp/tensorswitch/issues"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/tensorswitch_v2"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
tensorswitch = { path = ".", editable = true, extras = ["mcp"] }

[tool.pixi.tasks]
tensorswitch-v2 = "python -m tensorswitch_v2"

[tool.pixi.dependencies]
scyjava = ">=1.12.0,<2"
psutil = ">=7.0.0,<8"
requests = ">=2.32.3,<3"
pytest = ">=8.3.5,<9"
numpy = ">=2.2.5,<3"
tifffile = ">=2025.6.11,<2026"
dask = ">=2025.7.0,<2026"
dask-image = ">=2024.5.3,<2025"
dask-jobqueue = "==0.9.0"
cachey = ">=0.2.1,<0.3"
matplotlib = ">=3.10.3,<4"
zarr = ">=3.1.1,<4"
ome-types = ">=0.6.0,<0.7"
nd2 = ">=0.10.3,<0.11"
h5py = ">=3.14.0,<4"
pydantic = ">=2.0.0,<3"
pandas = "*"
openpyxl = "*"
awscli = ">=2.28.1,<3"
aicspylibczi = ">=3.3.1,<4"
pip = ">=25.3,<26"
scipy = ">=1.8"

[tool.pixi.feature.ipykernel.dependencies]
ipykernel = "*"

[tool.pixi.environments]
jupyter = ["ipykernel"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests/tensorswitch_v2"]
